--- a/pom.xml
+++ b/pom.xml
@@ -99,4 +99,19 @@
     <scope>test</scope>
 </dependency>
 	</dependencies>
+	<build>
+  <plugins>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-surefire-plugin</artifactId>
+      <version>3.2.5</version>
+      <configuration>
+        <includes>
+          <include>**/*Run.java</include>
+          <include>**/*Test.java</include>
+        </includes>
+      </configuration>
+    </plugin>
+  </plugins>
+</build>
 </project>
