--- a/pom.xml
+++ b/pom.xml
@@ -106,12 +106,14 @@
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-surefire-plugin</artifactId>
       <version>3.2.5</version>
-      <configuration>
-        <includes>
-    <include>**/*Run.java</include>
-    <include>**/*run.java</include>
-    <include>**/*Test.java</include>
-</includes>
+     <configuration>
+    <includes>
+        <include>**/*Run.java</include>
+        <include>**/*run.java</include>
+        <include>**/*Test.java</include>
+    </includes>
+</configuration>
+
 
         <!-- Important for Cucumber + Extent -->
         <systemPropertyVariables>
