--- a/pom.xml
+++ b/pom.xml
@@ -106,13 +106,18 @@
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-surefire-plugin</artifactId>
       <version>3.2.5</version>
-     <configuration>
-    <includes>
-        <include>**/*Run.java</include>
-        <include>**/*run.java</include>
-        <include>**/*Test.java</include>
-    </includes>
-</configuration>
+    <configuration>
+        <includes>
+            <include>**/*Run.java</include>
+            <include>**/*Test.java</include>
+        </includes>
+
+        <!-- 👇 यहीं पर systemPropertyVariables डालो -->
+        <systemPropertyVariables>
+            <propertyName>propertyValue</propertyName>
+            <cucumber.filter.tags>@Smoke</cucumber.filter.tags>
+        </systemPropertyVariables>
+    </configuration>
 
 
         <!-- Important for Cucumber + Extent -->
