--- a/pom.xml
+++ b/pom.xml
@@ -100,38 +100,31 @@
 </dependency>
 	</dependencies>
 	<build>
-  <plugins>
-    <!-- Surefire for running tests -->
-    <plugin>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-surefire-plugin</artifactId>
-      <version>3.2.5</version>
-    <configuration>
-        <includes>
-            <include>**/*Run.java</include>
-            <include>**/*Test.java</include>
-        </includes>
+ <plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-surefire-plugin</artifactId>
+  <version>3.2.5</version>
+  <configuration>
+    <includes>
+      <include>**/*Run.java</include>
+      <include>**/*Test.java</include>
+    </includes>
 
-        <!-- 👇 यहीं पर systemPropertyVariables डालो -->
-        <systemPropertyVariables>
-            <propertyName>propertyValue</propertyName>
-            <cucumber.filter.tags>@Smoke</cucumber.filter.tags>
-        </systemPropertyVariables>
-    </configuration>
+    <!-- 👇 सब properties यहीं डालो -->
+    <systemPropertyVariables>
+      <cucumber.filter.tags>@Smoke</cucumber.filter.tags>
 
+      <!-- Extent Report configs -->
+      <extent.reporter.spark.start>true</extent.reporter.spark.start>
+      <extent.reporter.spark.out>target/extent-report/ExtentSpark.html</extent.reporter.spark.out>
+      <extent.reporter.pdf.start>true</extent.reporter.pdf.start>
+      <extent.reporter.pdf.out>target/extent-report/ExtentReport.pdf</extent.reporter.pdf.out>
+      <extent.reporter.html.start>true</extent.reporter.html.start>
+      <extent.reporter.html.out>target/extent-report/ExtentReport.html</extent.reporter.html.out>
+    </systemPropertyVariables>
+  </configuration>
+</plugin>
 
-        <!-- Important for Cucumber + Extent -->
-        <systemPropertyVariables>
-          <extent.reporter.spark.start>true</extent.reporter.spark.start>
-          <extent.reporter.spark.out>target/extent-report/ExtentSpark.html</extent.reporter.spark.out>
-          <extent.reporter.pdf.start>true</extent.reporter.pdf.start>
-          <extent.reporter.pdf.out>target/extent-report/ExtentReport.pdf</extent.reporter.pdf.out>
-          <extent.reporter.html.start>true</extent.reporter.html.start>
-          <extent.reporter.html.out>target/extent-report/ExtentReport.html</extent.reporter.html.out>
-        </systemPropertyVariables>
-      </configuration>
-    </plugin>
-  </plugins>
 </build>
 
 </project>
