--- a/pom.xml
+++ b/pom.xml
@@ -106,10 +106,11 @@
       <artifactId>maven-surefire-plugin</artifactId>
       <version>3.2.5</version>
       <configuration>
-        <includes>
-          <include>**/*Run.java</include>
-          <include>**/*Test.java</include>
-        </includes>
+       <includes>
+  <include>**/*Run.java</include>
+  <include>**/*run.java</include>   <!-- छोटा r भी -->
+  <include>**/*Test.java</include>
+</includes>
 
         <systemPropertyVariables>
           <cucumber.filter.tags>@Smoke</cucumber.filter.tags>
