--- a/pom.xml
+++ b/pom.xml
@@ -106,23 +106,12 @@
     <artifactId>maven-surefire-plugin</artifactId>
     <version>3.2.5</version>
     <configuration>
-        <includes>
-            <include>**/*Run.java</include>
-            <include>**/*run.java</include>
-            <include>**/*Runner.java</include>
-            <include>**/*runner.java</include>
-        </includes>
-        <systemPropertyVariables>
-            <cucumber.plugin>
-                pretty,
-                html:target/cucumber-reports/cucumber.html,
-                json:target/cucumber-reports/cucumber.json,
-                junit:target/cucumber-reports/cucumber.xml,
-                com.aventstack.extentreports.cucumber.adapter.ExtentCucumberAdapter:
-            </cucumber.plugin>
-        </systemPropertyVariables>
+        <suiteXmlFiles>
+            <suiteXmlFile>testng.xml</suiteXmlFile>
+        </suiteXmlFiles>
     </configuration>
 </plugin>
+
 
 
 
